--- a/index.html
+++ b/index.html
@@ -1,45 +1,77 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="view all">
-        <link href="css/styles.css" rel="stylesheet" type="text/css" media="view all">
-        <script src="js/jquery-3.3.1.js"></script>
-        <script src="js/scripts.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-        <title>Anita's Kitchen</title>
-      </head>
 
-      <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="view all">
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="view all">
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+  <title>Anita's Kitchen</title>
+</head>
 
-        <div id="wrapper" class="col-md-12">
-          <div id="header" class="col-md-12">
-            </div>
-            <div id="Logo">
-              <img src="images/logoBig.png">
-              <p class="header-text">We Provide The Best Food </p>
-              <p class="header-text">At The <strong>Right Price</strong></p>
-            </div>
-            </div>
+<body>
+  <!--X X X -->
+  <!--Start Header -->
+  <div id="wrapper" class="col-md-12">
+    <div id="header" class="col-md-12">
+    </div>
+    <div id="Logo">
+      <img src="images/logoBig.png">
+      <p class="header-text">We Provide The Best Food </p>
+      <p class="header-text">At The <strong>Right Price</strong></p>
+    </div>
+  </div>
+  <!--X X X -->
 
-            <div class="nav-bar">
-              <div class="nav-item">
-                <div id="nav-first">
-                <br><br><p id="Happyhour"><strong>Happy Hour</strong></p>
-                </div>
-                <div id="nav-second">
-                  <br><br><p id="PartyTime"><strong>Party Time</strong></p>
-
-                </div>
-
-
-
-
-
-
+  <!--Start Navigation Bar 1-->
+  <div class="nav-bar">
+    <div class="nav-item">
+      <div id="nav-1st">
+        <br><br>
+        <p id="Happyhour"><strong>Happy Hour</strong></p>
+      </div>
+      <div id="nav-2nd">
+        <br><br>
+        <p id="PartyTime"><strong>Party Time</strong></p>
+      </div>
+    </div>
+    <!--End Navigation Bar 1 -->
 
 
+    <!--X X X -->
+    <!--Start Navigation Bar 2 -->
+    <div id="nav2" class="nav-item">
+      <p class="navtext">Breakfast</p>
+    </div><!--X X X -->
+    <!--End Navigation Bar 2 -->
 
-  </body>
+    <!--X X X -->
+    <!--Start Navigation Bar 3 -->
+    <div id="nav3" class="nav-item">
+      <p class="navtext">Lunch</p>
+    </div>
+  </div><!--X X X -->
+  <!--End Navigation Bar 3 -->
+
+  <!--X X X -->
+  <!--Start Navigation Bar 4 -->
+  <div id="nav4" class="nav-item">
+    <p class="navtext">Dinner</p>
+</div>
+</div><!--X X X -->
+<!--End Navigation Bar 4 -->
+
+
+
+
+
+
+
+
+
+</body>
+
 </html>
