added information and buttons for the content

--- a/index.html
+++ b/index.html
@@ -64,6 +64,67 @@
 </div><!--X X X -->
 <!--End Navigation Bar 4 -->
 
+<!--X X X -->
+<!--Start Section for Content -->
+<div class="content">
+<div class="content-wrapper">
+<div id="content-1" class="content-items">
+  <div id="1stimg">
+
+
+    <!--Start Section for Images -->
+    <!--Start Section for Images (Top) -->
+
+    <div id="1stimgwrapper">
+            <div id="img-up">
+              <img id="imgtop" src="images/fastFood1.jpg" alt="Plate img">
+            </div>
+
+<!--Start Section for Images (Bottom) -->
+            <div id="img-bottom">
+              <img id="imgbottom" src="images/fastFood2.jpg" alt="Plate img">
+            </div>
+            </div>
+
+          </div><!--End Section for Images (Top) -->
+        </div><!--End Section for Images (Bottom) -->
+
+        <!--X X X -->
+        <!--Start Section for Text 1-->
+        <div id="content-2" class="content-items">
+          <div id="container-text">
+<h2>Fast Food</h2>
+<p><strong>You'll love our delicious fast food</strong></p></br>
+<p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est
+   ad nominati consequuntur, ut facer populo referrentur mei. Pri
+   ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex
+   qui. His et animal diceret recteque, cum unum vidisse in.</p>
+  <button class="btn-submit">VIEW GALLERY</button>
+</p>
+          </div>
+        </div><!--X X X -->
+        <!--End Section for Text 1-->
+
+
+<!--Start Section for Text 2-->
+        <div id="content-3" class="content-items">
+          <div id="container-text2">
+<h2>Drinks</h2>
+<p><strong>We also produce delicious drinks</strong></p></br>
+<p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est
+   ad nominati consequuntur, ut facer populo referrentur mei. Pri
+   ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex
+   qui. His et animal diceret recteque, cum unum vidisse in.</p>
+  <button class="btn-submit">VIEW GALLERY</button>
+</p>
+          </div>
+        </div><!--X X X -->
+        <!--End Section for Text 2-->
+
+        <div id="content-fourth" class="content-items">
+          <div id="fourthimg">
+            <div id="fourthimgwrapper">
+
 
 
 
