added content and buttons

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!--End Navigation Bar 4 -->
 
 <!--X X X -->
-<!--Start Section for Content -->
+<!--Start Section for Content Wrapping-->
 <div class="content">
 <div class="content-wrapper">
 <div id="content-1" class="content-items">
@@ -121,10 +121,40 @@
         </div><!--X X X -->
         <!--End Section for Text 2-->
 
-        <div id="content-fourth" class="content-items">
-          <div id="fourthimg">
-            <div id="fourthimgwrapper">
+        <!--Start Section for Images -->
+        <!--Start Section for Images (Top) -->
+        <div id="content-4" class="content-items">
+          <div id="4th-img">
+            <div id="4thimgwrapper">
+              <div id="verticalimg">
+              <img id="img1" src="images/drink1.jpg" alt="drink1">
+              </div>
+              <div id="verticalimg2">
+                <img id="img2" src="images/drink2.jpg" alt="drink2">
 
+              </div>
+
+              </div>
+              </div>
+                      </div>
+                    </div>
+                    <!--End Section for Content Wrapping-->
+
+                    <div class="content-wrapper2">
+                      <br>
+                      <div class="bottomcontent">
+                      <div class="navbtnswrapper">
+                        <button id="btn1" class="navbtn">Fast Food</button>
+                        <button id="btn2" class="navbtn">Drinks
+              </button>
+                        <button id="btn3" class="navbtn">Chicken</button>
+                        <button id="btn4" class="navbtn">Rice</button>
+
+
+                      </div>
+                      <div class="bottomimgsarrow">
+
+                      </div>
 
 
 
