added section for images at the bottom

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <!--Start Navigation Bar 2 -->
     <div id="nav2" class="nav-item">
       <p class="navtext">Breakfast</p>
-    </div><!--X X X -->
+    </div>
+    <!--X X X -->
     <!--End Navigation Bar 2 -->
 
     <!--X X X -->
@@ -53,108 +54,140 @@
     <div id="nav3" class="nav-item">
       <p class="navtext">Lunch</p>
     </div>
-  </div><!--X X X -->
+  </div>
+  <!--X X X -->
   <!--End Navigation Bar 3 -->
 
   <!--X X X -->
   <!--Start Navigation Bar 4 -->
   <div id="nav4" class="nav-item">
     <p class="navtext">Dinner</p>
-</div>
-</div><!--X X X -->
-<!--End Navigation Bar 4 -->
+  </div>
+  </div>
+  <!--X X X -->
+  <!--End Navigation Bar 4 -->
 
-<!--X X X -->
-<!--Start Section for Content Wrapping-->
-<div class="content">
-<div class="content-wrapper">
-<div id="content-1" class="content-items">
-  <div id="1stimg">
+  <!--X X X -->
+  <!--Start Section for Content Wrapping-->
+  <div class="content">
+    <div class="content-wrapper">
+      <div id="content-1" class="content-items">
+        <div id="1stimg">
 
 
-    <!--Start Section for Images -->
-    <!--Start Section for Images (Top) -->
+          <!--Start Section for Images -->
+          <!--Start Section for Images (Top) -->
 
-    <div id="1stimgwrapper">
+          <div id="1stimgwrapper">
             <div id="img-up">
               <img id="imgtop" src="images/fastFood1.jpg" alt="Plate img">
             </div>
 
-<!--Start Section for Images (Bottom) -->
+            <!--Start Section for Images (Bottom) -->
             <div id="img-bottom">
               <img id="imgbottom" src="images/fastFood2.jpg" alt="Plate img">
             </div>
+          </div>
+
+        </div>
+        <!--End Section for Images (Top) -->
+      </div>
+      <!--End Section for Images (Bottom) -->
+
+      <!--X X X -->
+      <!--Start Section for Text 1-->
+      <div id="content-2" class="content-items">
+        <div id="container-text">
+          <h2>Fast Food</h2>
+          <p><strong>You'll love our delicious fast food</strong></p>
+          </br>
+          <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
+            in.</p>
+          <button class="btn-submit">VIEW GALLERY</button>
+          </p>
+        </div>
+      </div>
+      <!--X X X -->
+      <!--End Section for Text 1-->
+
+
+      <!--Start Section for Text 2-->
+      <div id="content-3" class="content-items">
+        <div id="container-text2">
+          <h2>Drinks</h2>
+          <p><strong>We also produce delicious drinks</strong></p>
+          </br>
+          <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
+            in.</p>
+          <button class="btn-submit">VIEW GALLERY</button>
+          </p>
+        </div>
+      </div>
+      <!--X X X -->
+      <!--End Section for Text 2-->
+
+      <!--Start Section for Images -->
+      <!--Start Section for Images (Top) -->
+      <div id="content-4" class="content-items">
+        <div id="4th-img">
+          <div id="4thimgwrapper">
+            <div id="verticalimg">
+              <img id="img1" src="images/drink1.jpg" alt="drink1">
+            </div>
+            <div id="verticalimg2">
+              <img id="img2" src="images/drink2.jpg" alt="drink2">
+
             </div>
 
-          </div><!--End Section for Images (Top) -->
-        </div><!--End Section for Images (Bottom) -->
-
-        <!--X X X -->
-        <!--Start Section for Text 1-->
-        <div id="content-2" class="content-items">
-          <div id="container-text">
-<h2>Fast Food</h2>
-<p><strong>You'll love our delicious fast food</strong></p></br>
-<p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est
-   ad nominati consequuntur, ut facer populo referrentur mei. Pri
-   ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex
-   qui. His et animal diceret recteque, cum unum vidisse in.</p>
-  <button class="btn-submit">VIEW GALLERY</button>
-</p>
           </div>
-        </div><!--X X X -->
-        <!--End Section for Text 1-->
+        </div>
+      </div>
+    </div>
+    <!--End Section for Content Wrapping-->
+
+    <div class="content-wrapper2">
+      <br>
+      <div class="bottomcontent">
+        <div class="navbtnswrapper">
+          <button id="btn1" class="navbtn">Fast Food</button>
+          <button id="btn2" class="navbtn">Drinks</button>
+          <button id="btn3" class="navbtn">Chicken</button>
+          <button id="btn4" class="navbtn">Rice</button>
+        </div>
 
 
-<!--Start Section for Text 2-->
-        <div id="content-3" class="content-items">
-          <div id="container-text2">
-<h2>Drinks</h2>
-<p><strong>We also produce delicious drinks</strong></p></br>
-<p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est
-   ad nominati consequuntur, ut facer populo referrentur mei. Pri
-   ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex
-   qui. His et animal diceret recteque, cum unum vidisse in.</p>
-  <button class="btn-submit">VIEW GALLERY</button>
-</p>
+        <div class="bottom-images-arrow">
+    </div>
+    <div class="bottom-images">
+        <div id="imagebottom1" class="image">
+      </div>
+
+        <div class="text-image">
+        <p>Chicken Burger</p>
+        </div>
+        </div>
+
+        <div class="bottom-images">
+          <div id="imagebottom2"  class="image">
           </div>
-        </div><!--X X X -->
-        <!--End Section for Text 2-->
 
-        <!--Start Section for Images -->
-        <!--Start Section for Images (Top) -->
-        <div id="content-4" class="content-items">
-          <div id="4th-img">
-            <div id="4thimgwrapper">
-              <div id="verticalimg">
-              <img id="img1" src="images/drink1.jpg" alt="drink1">
-              </div>
-              <div id="verticalimg2">
-                <img id="img2" src="images/drink2.jpg" alt="drink2">
+          <div class="text-image">
+            <p>Beef Burger</p>
+          </div>
+        </div>
 
-              </div>
+        <div class="bottom-images">
+          <div id="imagebottom3"  class="image">
 
-              </div>
-              </div>
-                      </div>
-                    </div>
-                    <!--End Section for Content Wrapping-->
-
-                    <div class="content-wrapper2">
-                      <br>
-                      <div class="bottomcontent">
-                      <div class="navbtnswrapper">
-                        <button id="btn1" class="navbtn">Fast Food</button>
-                        <button id="btn2" class="navbtn">Drinks
-              </button>
-                        <button id="btn3" class="navbtn">Chicken</button>
-                        <button id="btn4" class="navbtn">Rice</button>
+          </div>
+          <div class="text-image">
+            <p>Chicken Pizza</p>
+          </div>
+        </div>
 
 
-                      </div>
-                      <div class="bottomimgsarrow">
 
-                      </div>
+
 
 
 
