added testinmonials section

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
     </div>
     <!--End Section for Content Wrapping-->
 
+    <!--Start Section for Images -->
+    <!--Start Section for Images (Beneath) -->
     <div class="content-wrapper2">
       <br>
       <div class="bottomcontent">
@@ -184,6 +186,37 @@
             <p>Chicken Pizza</p>
           </div>
         </div>
+
+        <div class="bottom-images-arrow">
+        </div>
+          </div>
+            </div>
+            <!--End Section for Images -->
+            <!--End Section for Images (Beneath) -->
+
+            <!--Start Section for Testimonials -->
+
+            <div class="bottom-test">
+                <br>
+                <div class="test">
+        <div class="testleft">
+          <div class="leftcontent">
+            <p>Our Happy Customers</p>
+        <p><strong>George Richard</strong></p>
+        <p>Greatfood! Menu is awsome, there foods are not only
+           great but also in the right price.I'll highly recommend
+            them :)</p>
+        <p id=imagetest>
+          <strong class="peeps"><</strong>
+          <img src="images/customers/p1.png" alt="customer 1">
+          <img src="images/customers/p2.png" alt="customer 2">
+          <img src="images/customers/p3.png" alt="customer 3">
+          <strong class="peeps">></strong>
+
+
+
+        </p>
+          </div>
 
 
 
