added Menu info section

--- a/index.html
+++ b/index.html
@@ -195,9 +195,7 @@
             <!--End Section for Images (Beneath) -->
 
             <!--Start Section for Testimonials -->
-
-            <div class="bottom-test">
-                <br>
+            <div class="bottom-test"><br>
                 <div class="test">
         <div class="testleft">
           <div class="leftcontent">
@@ -211,7 +209,26 @@
           <img src="images/customers/p1.png" alt="customer 1">
           <img src="images/customers/p2.png" alt="customer 2">
           <img src="images/customers/p3.png" alt="customer 3">
-          <strong class="peeps">></strong>
+          <strong class="peeps">></strong></p>
+        </div>
+      </div>
+<!--End Section for Testimonials -->
+
+<!--Start Section for Menu Info -->
+<div class="testright">
+<div class="rightcontent">
+  <p>About Menu</p>
+  <p>We are menu a little team of 7 members.Ut wisi errim ad minim
+    Lorem ipsum dolor sit amet, no ius saepe oblique postulant.
+    Est ad nominati consequuntur, ut facer populo referrentur mei.
+  </p>
+</div>
+</div>
+  </div>
+    </div>
+<!--End Section for Menu info  -->
+
+
 
 
 
