added section for footer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
           <p><strong>You'll love our delicious fast food</strong></p>
           </br>
           <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
-            in.</p>
+            in.
+          </p>
           <button class="btn-submit">VIEW GALLERY</button>
           </p>
         </div>
@@ -118,7 +119,8 @@
           <p><strong>We also produce delicious drinks</strong></p>
           </br>
           <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
-            in.</p>
+            in.
+          </p>
           <button class="btn-submit">VIEW GALLERY</button>
           </p>
         </div>
@@ -159,18 +161,18 @@
 
 
         <div class="bottom-images-arrow">
-    </div>
-    <div class="bottom-images">
-        <div id="imagebottom1" class="image">
-      </div>
-
-        <div class="text-image">
-        <p>Chicken Burger</p>
         </div>
+        <div class="bottom-images">
+          <div id="imagebottom1" class="image">
+          </div>
+
+          <div class="text-image">
+            <p>Chicken Burger</p>
+          </div>
         </div>
 
         <div class="bottom-images">
-          <div id="imagebottom2"  class="image">
+          <div id="imagebottom2" class="image">
           </div>
 
           <div class="text-image">
@@ -179,7 +181,7 @@
         </div>
 
         <div class="bottom-images">
-          <div id="imagebottom3"  class="image">
+          <div id="imagebottom3" class="image">
 
           </div>
           <div class="text-image">
@@ -189,63 +191,70 @@
 
         <div class="bottom-images-arrow">
         </div>
-          </div>
-            </div>
-            <!--End Section for Images -->
-            <!--End Section for Images (Beneath) -->
+      </div>
+    </div>
+    <!--End Section for Images -->
+    <!--End Section for Images (Beneath) -->
 
-            <!--Start Section for Testimonials -->
-            <div class="bottom-test"><br>
-                <div class="test">
+    <!--Start Section for Testimonials -->
+    <div class="bottom-test"><br>
+      <div class="test">
         <div class="testleft">
           <div class="leftcontent">
             <p>Our Happy Customers</p>
-        <p><strong>George Richard</strong></p>
-        <p>Greatfood! Menu is awsome, there foods are not only
-           great but also in the right price.I'll highly recommend
-            them :)</p>
-        <p id=imagetest>
-          <strong class="peeps"><</strong>
-          <img src="images/customers/p1.png" alt="customer 1">
-          <img src="images/customers/p2.png" alt="customer 2">
-          <img src="images/customers/p3.png" alt="customer 3">
-          <strong class="peeps">></strong></p>
+            <p><strong>George Richard</strong></p>
+            <p>Greatfood! Menu is awsome, there foods are not only great but also in the right price.I'll highly recommend them :)</p>
+            <p id=imagetest>
+              <strong class="peeps"><</strong>
+              <img src="images/customers/p1.png" alt="customer 1">
+              <img src="images/customers/p2.png" alt="customer 2">
+              <img src="images/customers/p3.png" alt="customer 3">
+              <strong class="peeps">></strong></p>
+          </div>
+        </div>
+        <!--End Section for Testimonials -->
+
+        <!--Start Section for Menu Info -->
+        <div class="testright">
+          <div class="rightcontent">
+            <p>About Menu</p>
+            <p>We are menu a little team of 7 members.Ut wisi errim ad minim Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei.
+            </p>
+          </div>
         </div>
       </div>
-<!--End Section for Testimonials -->
-
-<!--Start Section for Menu Info -->
-<div class="testright">
-<div class="rightcontent">
-  <p>About Menu</p>
-  <p>We are menu a little team of 7 members.Ut wisi errim ad minim
-    Lorem ipsum dolor sit amet, no ius saepe oblique postulant.
-    Est ad nominati consequuntur, ut facer populo referrentur mei.
-  </p>
-</div>
-</div>
-  </div>
     </div>
-<!--End Section for Menu info  -->
+    <!--End Section for Menu info  -->
 
-
-
-
-
+    <!--Start Section for Footer  -->
+    <!--Start Section for Footer 1 -->
+    <div class="footer1"><br>
+      <div class="contact">
+        <p><strong>Get our daily food items delivered to your email</strong></p>
+        <p>
+          <input id="inputfield" type="text" name="" value="" placeholder="Your email">
+          <button id="subscribe" type="button" name="button">Subscribe</button></p>
+      </div>
+    </div>
+    <!--End Section for Footer 1 -->
+    <!--Start Section for Footer 2 -->
+    <div class="footer2">
+      <div class="footercontent">
+        <p>
+          <img src="images/footerlogos/logo_white.png" alt="menu image"> MENU
         </p>
-          </div>
-
-
-
-
-
-
-
-
-
-
-
-
+        <p>Thats What We Are</p>
+        <p id="footerimg">
+          <img src="images/footerlogos/facebook.png" alt="fb">
+          <img src="images/footerlogos/twitter.png" alt="twt">
+          <img src="images/footerlogos/pinterest.png" alt="pi">
+        </p>
+        <p>2016 Menu Restaurant</p>
+      </div>
+    </div>
+    <!--End Section for Footer 2 -->
+  </div>
+  </div>
 </body>
 
 </html>
