--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="view all">
-  <link href="css/styles.css" rel="stylesheet" type="text/css" media="view all">
-  <script src="js/jquery-3.3.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
   <title>Anita's Kitchen</title>
 </head>
@@ -15,15 +14,16 @@
 <body>
   <!--X X X -->
   <!--Start Header -->
-  <div id="wrapper" class="col-md-12">
-    <div id="header" class="col-md-12">
+  <header class="intro">
+    <div class="container">
+      <div class="jumbotron">
+          <img src="images/logoBig.png">
+          <p class="header-text">We Provide The Best Food </p>
+          <p class="header-text">At The <strong>Right Price</strong></p>
+      </div>
     </div>
-    <div id="Logo">
-      <img src="images/logoBig.png">
-      <p class="header-text">We Provide The Best Food </p>
-      <p class="header-text">At The <strong>Right Price</strong></p>
-    </div>
-  </div>
+  </header>
+
   <!--X X X -->
 
   <!--Start Navigation Bar 1-->
@@ -255,6 +255,8 @@
     <!--End Section for Footer 2 -->
   </div>
   </div>
+  <script src="js/jquery.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
