--- a/index.html
+++ b/index.html
@@ -4,42 +4,41 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="view all">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
-  <title>Anita's Kitchen</title>
+  <title>Anitas Kitchen</title>
 </head>
 
 <body>
   <!--X X X -->
   <!--Start Header -->
-  <header class="intro">
-    <div class="container">
-      <div class="jumbotron">
-          <img src="images/logoBig.png">
-          <p class="header-text">We Provide The Best Food </p>
-          <p class="header-text">At The <strong>Right Price</strong></p>
-      </div>
+  <header class="header">
+    <div id="Logo">
+      <img src="images/logoBig.png">
+      <p class="header-text">We Provide The Best Food </p>
+      <p class="header-text">At The <strong>Right Price</strong></p>
     </div>
   </header>
-
   <!--X X X -->
 
   <!--Start Navigation Bar 1-->
-  <div class="nav-bar">
-    <div class="nav-item">
-      <div id="nav-1st">
-        <br><br>
-        <p id="Happyhour"><strong>Happy Hour</strong></p>
-      </div>
-      <div id="nav-2nd">
-        <br><br>
-        <p id="PartyTime"><strong>Party Time</strong></p>
+  <div class="container-fluid">
+    <div class="nav-bar">
+      <div class="nav-item">
+        <div id="nav-1st">
+          <br><br>
+          <p id="Happyhour"><strong>Happy Hour</strong></p>
+        </div>
+        <div id="nav-2nd">
+          <br><br>
+          <p id="PartyTime"><strong>Party Time</strong></p>
+        </div>
       </div>
     </div>
     <!--End Navigation Bar 1 -->
-
 
     <!--X X X -->
     <!--Start Navigation Bar 2 -->
@@ -54,181 +53,160 @@
     <div id="nav3" class="nav-item">
       <p class="navtext">Lunch</p>
     </div>
-  </div>
-  <!--X X X -->
-  <!--End Navigation Bar 3 -->
+    <!--X X X -->
+    <!--End Navigation Bar 3 -->
 
-  <!--X X X -->
-  <!--Start Navigation Bar 4 -->
-  <div id="nav4" class="nav-item">
-    <p class="navtext">Dinner</p>
-  </div>
+    <!--X X X -->
+    <!--Start Navigation Bar 4 -->
+    <div id="nav4" class="nav-item">
+      <p class="navtext">Dinner</p>
+    </div>
   </div>
   <!--X X X -->
   <!--End Navigation Bar 4 -->
 
   <!--X X X -->
   <!--Start Section for Content Wrapping-->
-  <div class="content">
-    <div class="content-wrapper">
-      <div id="content-1" class="content-items">
+  <div class="container">
+    <div class="row upper-row">
+      <div class="col-md-6">
         <div id="1stimg">
-
-
-          <!--Start Section for Images -->
-          <!--Start Section for Images (Top) -->
-
+          <!--X X X -->
+          <!--Start Section for Content Wrapping-->
           <div id="1stimgwrapper">
-            <div id="img-up">
+            <div id="top-img">
               <img id="imgtop" src="images/fastFood1.jpg" alt="Plate img">
             </div>
-
-            <!--Start Section for Images (Bottom) -->
-            <div id="img-bottom">
+            <div id="bottom-img">
               <img id="imgbottom" src="images/fastFood2.jpg" alt="Plate img">
             </div>
           </div>
-
         </div>
-        <!--End Section for Images (Top) -->
       </div>
-      <!--End Section for Images (Bottom) -->
-
-      <!--X X X -->
-      <!--Start Section for Text 1-->
-      <div id="content-2" class="content-items">
+      <div class="col-md-6">
         <div id="container-text">
           <h2>Fast Food</h2>
           <p><strong>You'll love our delicious fast food</strong></p>
-          </br>
-          <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
-            in.
-          </p>
-          <button class="btn-submit">VIEW GALLERY</button>
+          <p>Lorem ipsum dolor sit amet, vitae suspendisse vestibulum, viverra dignissim vel, dis enim diam vel dui metus, sollicitudin a, tellus massa a tristique donec. Aliquet sed a morbi id nibh, libero id vestibulum, lectus amet, sapien pellentesque
+            imperdiet consequat fermentum magna interdum, nam urna vehicula lacus congue mollis. Sapiente ut, vitae augue, nunc proin purus In amet id porttitor natoque.</p>
+            <button class="btn-submit">VIEW GALLERY</button>
           </p>
         </div>
       </div>
-      <!--X X X -->
-      <!--End Section for Text 1-->
+      <!--End Section for Images (Top) -->
+    </div>
+    <!--End Section for Images (Bottom) -->
 
-
-      <!--Start Section for Text 2-->
-      <div id="content-3" class="content-items">
+    <div class="row lower-row">
+      <div class="col-md-6">
         <div id="container-text2">
           <h2>Drinks</h2>
           <p><strong>We also produce delicious drinks</strong></p>
-          </br>
-          <p>Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei. Pri ea legendos recusabo. Nibh iisque ne duo, utinam evertitur ex qui. His et animal diceret recteque, cum unum vidisse
-            in.
-          </p>
-          <button class="btn-submit">VIEW GALLERY</button>
+          <p>Lorem ipsum dolor sit amet, vitae suspendisse vestibulum, viverra dignissim vel, dis enim diam vel dui metus, sollicitudin a, tellus massa a tristique donec. Aliquet sed a morbi id nibh, libero id vestibulum, lectus amet, sapien pellentesque
+            imperdiet consequat fermentum magna interdum, nam urna vehicula lacus congue mollis. Sapiente ut, vitae augue, nunc proin purus In amet id porttitor natoque.</p>
+            <button class="btn-submit">VIEW GALLERY</button>
           </p>
         </div>
       </div>
       <!--X X X -->
       <!--End Section for Text 2-->
 
-      <!--Start Section for Images -->
-      <!--Start Section for Images (Top) -->
-      <div id="content-4" class="content-items">
+
+      <div class="col-md-6">
         <div id="4th-img">
-          <div id="4thimgwrapper">
-            <div id="verticalimg">
-              <img id="img1" src="images/drink1.jpg" alt="drink1">
+          <div id="4th-imgwrapper">
+            <div id="height-img">
+              <img id="img1" src="images/drink1.jpg" alt="">
             </div>
-            <div id="verticalimg2">
-              <img id="img2" src="images/drink2.jpg" alt="drink2">
-
+            <div id="height-img2">
+              <img id="img2" src="images/drink2.jpg" alt="">
             </div>
-
           </div>
         </div>
       </div>
     </div>
-    <!--End Section for Content Wrapping-->
+  </div>
+  <!--End Section for Content Wrapping-->
 
-    <!--Start Section for Images -->
-    <!--Start Section for Images (Beneath) -->
-    <div class="content-wrapper2">
-      <br>
-      <div class="bottomcontent">
-        <div class="navbtnswrapper">
-          <button id="btn1" class="navbtn">Fast Food</button>
-          <button id="btn2" class="navbtn">Drinks</button>
-          <button id="btn3" class="navbtn">Chicken</button>
-          <button id="btn4" class="navbtn">Rice</button>
-        </div>
+  <div class="container-fluid">
+    <div class="tabs-nav">
+      <div class="container nav-foods">
+        <ul class="nav nav-tabs nav-justified">
+          <li class="nav-item"><a data-toggle="tab" href="#fastfood" class="nav-link active"><span class="ffod">Fast Food</span></a> </li>
+          <li class="nav-item"><a data-toggle="tab" href="#drinks" class="nav-link">Drinks</a></li>
+          <li class="nav-item"><a data-toggle="tab" href="#chicken" class="nav-link">Chicken</a></li>
+          <li class="nav-item"><a data-toggle="tab" href="#rice" class="nav-link">Rice</a></li>
+        </ul>
 
-
-        <div class="bottom-images-arrow">
-        </div>
-        <div class="bottom-images">
-          <div id="imagebottom1" class="image">
-          </div>
-
-          <div class="text-image">
-            <p>Chicken Burger</p>
-          </div>
-        </div>
-
-        <div class="bottom-images">
-          <div id="imagebottom2" class="image">
-          </div>
-
-          <div class="text-image">
-            <p>Beef Burger</p>
-          </div>
-        </div>
-
-        <div class="bottom-images">
-          <div id="imagebottom3" class="image">
-
-          </div>
-          <div class="text-image">
+        <div class="tab-content bg-food">
+          <div class="tab-pane fade in active" id="fastfood">
+            <img src="images/fastfood/chickenBurger.jpg" alt="chickenburger">
+            <div class="text4image">
+              <p>Chicken Burger</p>
+            <img src="images/fastfood/beefBurger.jpg" alt="beefburger">
+            <div class="text4image">
+              <p>Beef Burger</p>
+            <img src="images/fastfood/chickenPizza.jpg" alt="chickenpizza">
+          <div class="text4image">
             <p>Chicken Pizza</p>
           </div>
         </div>
+        </div>
+        </div>
+      </div>
 
-        <div class="bottom-images-arrow">
+          <div class="tab-pane fade" id="drinks">
+            <p>more content.</p>
+          </div>
+          <div class="tab-pane fade" id="chicken">
+            <p>Chicken content.</p>
+          </div>
+          <div class="tab-pane fade" id="rice">
+            <p>Rice content.</p>
+
+          </div>
         </div>
       </div>
     </div>
-    <!--End Section for Images -->
-    <!--End Section for Images (Beneath) -->
+  </div>
 
-    <!--Start Section for Testimonials -->
-    <div class="bottom-test"><br>
-      <div class="test">
-        <div class="testleft">
+  <!--Start Section for Testimonials -->
+  <div class="container">
+    <div class="row customers">
+      <div class="testimonial">
+        <div class="col-md-7 testimonialleft">
           <div class="leftcontent">
-            <p>Our Happy Customers</p>
+            <p class="orange-text"><strong>Our Happy Customers</strong></p>
             <p><strong>George Richard</strong></p>
             <p>Greatfood! Menu is awsome, there foods are not only great but also in the right price.I'll highly recommend them :)</p>
-            <p id=imagetest>
-              <strong class="peeps"><</strong>
-              <img src="images/customers/p1.png" alt="customer 1">
-              <img src="images/customers/p2.png" alt="customer 2">
-              <img src="images/customers/p3.png" alt="customer 3">
-              <strong class="peeps">></strong></p>
-          </div>
-        </div>
-        <!--End Section for Testimonials -->
-
-        <!--Start Section for Menu Info -->
-        <div class="testright">
-          <div class="rightcontent">
-            <p>About Menu</p>
-            <p>We are menu a little team of 7 members.Ut wisi errim ad minim Lorem ipsum dolor sit amet, no ius saepe oblique postulant. Est ad nominati consequuntur, ut facer populo referrentur mei.
+            <p id=imageicon>
+              <strong class="prev"><</strong>
+              <img src="images/customers/p1.png" alt="">
+              <img src="images/customers/p2.png" alt="">
+              <img src="images/customers/p3.png" alt="">
+              <strong class="prev"></strong>
             </p>
           </div>
         </div>
+        <!--End Section for Testimonials -->
+        <!--Start Section for Menu Info -->
+        <div class="col-md-5 testimonialright">
+          <div class="rightcontent">
+            <p class="orange-text"><strong>About Menu</strong></p>
+            <p>We are mainly a little team of 7 members.Lorem ipsum dolor sit amet,
+              vitae suspendisse vestibulum, viverra dignissim vel. Aliquet sed a
+               morbi id nibh, libero id vestibulum, lectus amet, sapien
+               pellentesque imperdiet consequat fermentum magna interdum.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <!--End Section for Menu info  -->
+  </div>
+  <!--End Section for Menu info  -->
 
-    <!--Start Section for Footer  -->
-    <!--Start Section for Footer 1 -->
-    <div class="footer1"><br>
+  <!--Start Section for Footer  -->
+  <div class="container-fluid">
+    <div class="sec-subscribe">
       <div class="contact">
         <p><strong>Get our daily food items delivered to your email</strong></p>
         <p>
@@ -236,27 +214,25 @@
           <button id="subscribe" type="button" name="button">Subscribe</button></p>
       </div>
     </div>
-    <!--End Section for Footer 1 -->
-    <!--Start Section for Footer 2 -->
-    <div class="footer2">
-      <div class="footercontent">
-        <p>
-          <img src="images/footerlogos/logo_white.png" alt="menu image"> MENU
-        </p>
-        <p>Thats What We Are</p>
-        <p id="footerimg">
-          <img src="images/footerlogos/facebook.png" alt="fb">
-          <img src="images/footerlogos/twitter.png" alt="twt">
-          <img src="images/footerlogos/pinterest.png" alt="pi">
-        </p>
-        <p>2016 Menu Restaurant</p>
-      </div>
+  </div>
+
+  <footer class="bottomtestimonial3">
+    <div class="footercontent">
+      <p>
+        <img src="images/footerlogos/logo_white.png" alt=""> MENU
+      </p>
+      <p>Thats What We Are</p>
+
+      <img src="images/footerlogos/facebook.png" alt="" class="img-fluid">
+      <img src="images/footerlogos/twitter.png" alt="">
+      <img src="images/footerlogos/pinterest.png" alt=""><br><br>
+      <p>2016 Menu Restaurant</p>
     </div>
-    <!--End Section for Footer 2 -->
+    </div>
+  </footer>
+
   </div>
-  </div>
-  <script src="js/jquery.js"></script>
-  <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
