--- a/index.html
+++ b/index.html
@@ -4,18 +4,35 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/font-awesome.css"type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+  <script src="js/jquery.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Anitas Kitchen</title>
 </head>
 
 <body>
+
   <!--X X X -->
   <!--Start Header -->
   <header class="header">
+    <div id="menubar">
+      <a><i class="first-bars fa fa-bars"aria-hidden="true"></i></a>
+      <div class="overlay-screen">
+        <div class="overlay-menu">
+          <a href="index.html" class="close">&times;</a> 
+          <ul>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Menu</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div id="Logo">
       <img src="images/logoBig.png">
       <p class="header-text">We Provide The Best Food </p>
@@ -29,11 +46,9 @@
     <div class="nav-bar">
       <div class="nav-item">
         <div id="nav-1st">
-          <br><br>
           <p id="Happyhour"><strong>Happy Hour</strong></p>
         </div>
         <div id="nav-2nd">
-          <br><br>
           <p id="PartyTime"><strong>Party Time</strong></p>
         </div>
       </div>
@@ -89,7 +104,7 @@
           <p><strong>You'll love our delicious fast food</strong></p>
           <p>Lorem ipsum dolor sit amet, vitae suspendisse vestibulum, viverra dignissim vel, dis enim diam vel dui metus, sollicitudin a, tellus massa a tristique donec. Aliquet sed a morbi id nibh, libero id vestibulum, lectus amet, sapien pellentesque
             imperdiet consequat fermentum magna interdum, nam urna vehicula lacus congue mollis. Sapiente ut, vitae augue, nunc proin purus In amet id porttitor natoque.</p>
-            <button class="btn-submit">VIEW GALLERY</button>
+            <button class="btn-submit">VIEW GALLERY<i class="fa fa-arrow-right fa-1x"></i></button>
           </p>
         </div>
       </div>
@@ -104,8 +119,8 @@
           <p><strong>We also produce delicious drinks</strong></p>
           <p>Lorem ipsum dolor sit amet, vitae suspendisse vestibulum, viverra dignissim vel, dis enim diam vel dui metus, sollicitudin a, tellus massa a tristique donec. Aliquet sed a morbi id nibh, libero id vestibulum, lectus amet, sapien pellentesque
             imperdiet consequat fermentum magna interdum, nam urna vehicula lacus congue mollis. Sapiente ut, vitae augue, nunc proin purus In amet id porttitor natoque.</p>
-            <button class="btn-submit">VIEW GALLERY</button>
           </p>
+           <button class="btn-submit">VIEW GALLERY<i class="fa fa-arrow-right fa-1x"></i></button>
         </div>
       </div>
       <!--X X X -->
@@ -132,41 +147,42 @@
     <div class="tabs-nav">
       <div class="container nav-foods">
         <ul class="nav nav-tabs nav-justified">
-          <li class="nav-item"><a data-toggle="tab" href="#fastfood" class="nav-link active"><span class="ffod">Fast Food</span></a> </li>
-          <li class="nav-item"><a data-toggle="tab" href="#drinks" class="nav-link">Drinks</a></li>
-          <li class="nav-item"><a data-toggle="tab" href="#chicken" class="nav-link">Chicken</a></li>
-          <li class="nav-item"><a data-toggle="tab" href="#rice" class="nav-link">Rice</a></li>
+          <li class="nav-item active"><a data-toggle="tab" href="#fastfood" ><span class="ffod">Fast Food</span></a></li>
+          <li class="nav-item"><a data-toggle="tab" href="#drinks" >Drinks</a></li>
+          <li class="nav-item"><a data-toggle="tab" href="#chicken" >Chicken</a></li>
+          <li class="nav-item"><a data-toggle="tab" href="#rice">Rice</a></li>
         </ul>
-
         <div class="tab-content bg-food">
           <div class="tab-pane fade in active" id="fastfood">
-            <img src="images/fastfood/chickenBurger.jpg" alt="chickenburger">
-            <div class="text4image">
-              <p>Chicken Burger</p>
-            <img src="images/fastfood/beefBurger.jpg" alt="beefburger">
-            <div class="text4image">
-              <p>Beef Burger</p>
-            <img src="images/fastfood/chickenPizza.jpg" alt="chickenpizza">
-          <div class="text4image">
-            <p>Chicken Pizza</p>
+            <div class="row">
+              <div class="col-md-4">
+                <a><i class="fa fa-chevron-left fa-2x"></i></a>
+                <img src="images/fastfood/chickenBurger.jpg" alt="chickenburger">
+                <p class="text4image"><strong>Chicken Burger</strong></p>
+              </div>
+              <div class="col-md-4">
+                <img src="images/fastfood/beefBurger.jpg" alt="beefburger">
+                <p class="text4image"><strong>Beef Burger</strong></p>
+              </div>
+              <div class="col-md-4">
+                <img src="images/fastfood/chickenPizza.jpg" alt="chickenpizza">
+                <a><i class="fa fa-chevron-right fa-2x"></i></a>
+                <p class="text4image"><strong> Chicken Pizza </strong></p>
+              </div>
+            </div>
           </div>
-        </div>
-        </div>
-        </div>
-      </div>
-
           <div class="tab-pane fade" id="drinks">
-            <p>more content.</p>
+            <p><strong>Chicken Burger</strong></p>
           </div>
           <div class="tab-pane fade" id="chicken">
-            <p>Chicken content.</p>
-          </div>
+            <p><strong>Beef Burger</strong></p></br></br>
+          </div> 
           <div class="tab-pane fade" id="rice">
-            <p>Rice content.</p>
-
+            <p><strong>Chicken Pizza</strong></p>
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
@@ -179,13 +195,11 @@
             <p class="orange-text"><strong>Our Happy Customers</strong></p>
             <p><strong>George Richard</strong></p>
             <p>Greatfood! Menu is awsome, there foods are not only great but also in the right price.I'll highly recommend them :)</p>
-            <p id=imageicon>
-              <strong class="prev"><</strong>
-              <img src="images/customers/p1.png" alt="">
-              <img src="images/customers/p2.png" alt="">
-              <img src="images/customers/p3.png" alt="">
-              <strong class="prev"></strong>
-            </p>
+            <a><i class="fa fa-chevron-left"></i></a>
+            <img src="images/customers/p1.png" alt="">
+            <img src="images/customers/p2.png" alt="">
+            <img src="images/customers/p3.png" alt="">
+            <a><i class="fa fa-chevron-right"></i></a>              
           </div>
         </div>
         <!--End Section for Testimonials -->
@@ -223,9 +237,14 @@
       </p>
       <p>Thats What We Are</p>
 
-      <img src="images/footerlogos/facebook.png" alt="" class="img-fluid">
+      <!-- <img src="images/footerlogos/facebook.png" alt="" class="img-fluid">
       <img src="images/footerlogos/twitter.png" alt="">
-      <img src="images/footerlogos/pinterest.png" alt=""><br><br>
+      <img src="images/footerlogos/pinterest.png" alt=""><br><br> -->
+    <ul class="list-inline">
+    <li class="list-inline-item"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
+    <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
+    <li class="list-inline-item"><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>      
+    </ul>
       <p>2016 Menu Restaurant</p>
     </div>
     </div>
