--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Anitas Kitchen</title>
+  <title>Anita's Kitchen</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
       <a><i class="first-bars fa fa-bars"aria-hidden="true"></i></a>
       <div class="overlay-screen">
         <div class="overlay-menu">
-          <a href="index.html" class="close">&times;</a> 
+          <a href="index.html" class="close">&times;</a>
           <ul>
             <li><a href="#">Contacts</a></li>
             <li><a href="#">Events</a></li>
@@ -176,7 +176,7 @@
           </div>
           <div class="tab-pane fade" id="chicken">
             <p><strong>Beef Burger</strong></p></br></br>
-          </div> 
+          </div>
           <div class="tab-pane fade" id="rice">
             <p><strong>Chicken Pizza</strong></p>
           </div>
@@ -199,7 +199,7 @@
             <img src="images/customers/p1.png" alt="">
             <img src="images/customers/p2.png" alt="">
             <img src="images/customers/p3.png" alt="">
-            <a><i class="fa fa-chevron-right"></i></a>              
+            <a><i class="fa fa-chevron-right"></i></a>
           </div>
         </div>
         <!--End Section for Testimonials -->
@@ -243,7 +243,7 @@
     <ul class="list-inline">
     <li class="list-inline-item"><a href="#"><i class="fa fa-facebook fa-2x"></i></a></li>
     <li class="list-inline-item"><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-    <li class="list-inline-item"><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>      
+    <li class="list-inline-item"><a href="#"><i class="fa fa-pinterest fa-2x"></i></a></li>
     </ul>
       <p>2016 Menu Restaurant</p>
     </div>
