--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116385416-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-116385416-1');
+</script>
+
   <title>Anita's Kitchen</title>
 </head>
 
